--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<h2>HTML Buttons</h2>
+<h2>3Rawr page</h2>
 <p>HTML buttons are defined with the button tag:</p>
 
-<button>Click me</button>
+<button>i love you my samuele <3 bengünur I LOVE YOU TOO</button>
 
 </body>
 </html>
