--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
 <html>
-<body>
-
-<h2>3Rawr page</h2>
-<p>HTML buttons are defined with the button tag:</p>
-
-<button>i love you my samuele <3 bengünur I LOVE YOU TOO</button>
+    <head>
+    <style> 
+        body{ background-color: blanchedalmond}
+        h1{ background-color: blue}
+        h2{ background-color: aqua }
+        </style>
+            
+    </head>
+    <title>SDB page   
+    </title>
+     <body> img {
+            width: 100%;
+            height: auto;
+            } 
+       <img src="C:\Users\sdibl\Pictures\indexudwfue" alt="net">
+       <h1><hr/><p align="center">  Known  <hr/></p></h1>
+       <button>Unuseles button</button>
 
 </body>
 </html>
