--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     </head>
     <title>SDB page   
     </title>
-     <body> img {
-            width: 100%;
-            height: auto;
-            } 
-       <img src="C:\Users\sdibl\Pictures\indexudwfue" alt="net">
+     <body> 
+       <img src="C:\Users\sdibl\Pictures\indexudwfue" width: 100%; height: auto; alt="net">
        <h1><hr/><p align="center">  Known  <hr/></p></h1>
        <button>Unuseles button</button>
 
