--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SDB page   
     </title>
      <body> 
-       <img src="C:\Users\sdibl\Pictures\indexudwfue" width: 100%; height: auto; alt="net">
+       <img src="https://lh3.googleusercontent.com/proxy/eW_h2TqKSkOANgwZoc46FUwec2LHFQ_qlSaH6hnyBaOm4sexBdaW3i_77nEWIHXDtepZN1vf8kA8OtsC2n7QJQ7BvK4NPQtTnsixghKlUPZvtArphkENHjyu7ecR6MPW6oVMhzbNJ8x8eDgoJAVDPFrkY_VKvCJGFe_kwBOuzVdHq71rmSE" width: 100%; height: auto;>
        <h1><hr/><p align="center">  Known  <hr/></p></h1>
        <button>Unuseles button</button>
 
