--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
      <body> 
        <img src="https://lh3.googleusercontent.com/proxy/eW_h2TqKSkOANgwZoc46FUwec2LHFQ_qlSaH6hnyBaOm4sexBdaW3i_77nEWIHXDtepZN1vf8kA8OtsC2n7QJQ7BvK4NPQtTnsixghKlUPZvtArphkENHjyu7ecR6MPW6oVMhzbNJ8x8eDgoJAVDPFrkY_VKvCJGFe_kwBOuzVdHq71rmSE" width: 100%; height: auto;>
-       <h1><p> align="center"> Known </h1> </p>
+       <h1><p align="center"> Known </h1> /p>
        <button>Unuseles button</button>
 
 </body>
