--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
     <style>
-        
+        body {
+	       color: white
+        }
     </style>    
    <body style = "background: url(https://lh3.googleusercontent.com/proxy/eW_h2TqKSkOANgwZoc46FUwec2LHFQ_qlSaH6hnyBaOm4sexBdaW3i_77nEWIHXDtepZN1vf8kA8OtsC2n7QJQ7BvK4NPQtTnsixghKlUPZvtArphkENHjyu7ecR6MPW6oVMhzbNJ8x8eDgoJAVDPFrkY_VKvCJGFe_kwBOuzVdHq71rmSE); background-size: 100% 100%>
          </head>
