--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>SDB page   
     </title>
         
-       <h1><p align="center"> Known </h1> /p>
+       <h1><p> align="center"> Known </h1> </p>
        <button>Unuseles button</button>
 
 </body>
