--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
     <head>
     <style>
+	 .button {
+             background-color: #4CAF50; /* Green */
+             border: none;
+             color: white;
+             padding: 15px 32px;
+             text-align: center;
+             text-decoration: none;
+             display: inline-block;
+             font-size: 16px;
+         } 
         body {
 	       color: white
         }
@@ -11,7 +21,7 @@
     </title>
         
        <h1><p> align="center"> Known </h1> </p>
-       <button>Unuseles button</button>
+       <button>Rawr button</button>
 
 </body>
 </html>
