--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <style>
-	 .button {
+	  button {
              background-color: #4CAF50; /* Green */
              border: none;
              color: white;
@@ -19,8 +19,7 @@
          </head>
     <title>SDB page   
     </title>
-        
-       <h1><p> align="center"> Known </h1> </p>
+       <h1><p> align="center"> Rainfrog06 </h1> </p>
        <button class="Ra!n">Button</button>
 
 </body>
