--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>SDB page   
     </title>
        <h1><p> align="center"> Rainfrog06 </h1> </p>
-       <button class="Ra!n">Button</button>
+       <button class="button">Ra!n</button>
 
 </body>
 </html>
