--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	   
    <body style = "background: url(Samuele98-git.github.io/honeycomb-wallpaper-elegant-honey-b-wallpaper-c2b7e291a0-download-free-beautiful-hd-backgrounds-for-desktop-and-mobile-devices-in-this-year-of-honeycomb-wallpaper.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%>
          </head>
-         <img src="" alt="Paris" class="center"> 
+         <img src="Samuele98-git.github.io/clipart-profile-4.jpg" alt="comb" class="center"> 
        <h1><p> align="center"> Rainfrog06 </h1> </p>
        <button class="button">Ra!n</button>
 
