--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="Samuele98-git.github.io/clipart-profile-4.jpg" alt="comb" class="center"> 
    </head>       
        <h1><p align="center">Rainfrog06</p></h1> 
-       <button class="button">Ra!n</button>
+       <button align="center"; class="button">Ra!n</button>
 
 </body>
 </html>
