--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </title>  
 	   
    <body style = "background: url(Samuele98-git.github.io/honeycomb-wallpaper-elegant-honey-b-wallpaper-c2b7e291a0-download-free-beautiful-hd-backgrounds-for-desktop-and-mobile-devices-in-this-year-of-honeycomb-wallpaper.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%>
-        <img src="Samuele98-git.github.io/clipart-profile-4.jpg" alt="comb" class="center"> 
+        
    </head>       
+       <img src="Samuele98-git.github.io/clipart-profile-4.jpg" alt="comb" class="center"> 
        <h1><p align="center">Rainfrog06</p></h1> 
-       <button align="center"; class="button">Ra!n</button>
+       <button class="button">Ra!n</button>
 
 </body>
 </html>
