--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    </head>       
        <img src="Samuele98-git.github.io/clipart-profile-4.jpg" alt="comb" class="center"> 
        <h1><p align="center">Rainfrog06</p></h1> 
-       <button class="button">Ra!n</button>
+       <a href='https://bengunur06.github.io/'><button class="button">Ra!n</button></a>
 
 </body>
 </html>
