--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <body style = "background: url(Samuele98-git.github.io/honeycomb-wallpaper-elegant-honey-b-wallpaper-c2b7e291a0-download-free-beautiful-hd-backgrounds-for-desktop-and-mobile-devices-in-this-year-of-honeycomb-wallpaper.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%>
         
    </head>       
-       <img src="https://samuele98-git.github.io/clipart-profile-4.jpg" alt="comb" align="center"> 
+       <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="comb" align="center"> 
        <h1><p align="center">Rainfrog06</p></h1> 
        <a href='https://bengunur06.github.io/'><button class="button">Ra!n</button></a>
 
