--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         
    </head>       
        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"; alt="comb"; align="center"> 
-       <h1><p align="center">Rainfrog06</p></h1> 
+       <hr />
+            <h1 align="center"><b><i>SDB PAGE</b></i></h1>
+            <hr />
+                <h2 align="center"><b align="center">About me</b></h2>
+                <p align="center"><strong>Name:</strong> Samuele<br /><strong>Surname:</strong> Di Blasio <br /><strong>Age</strong>: 21<br /><strong>Birthday:</strong> 10/06/1998<br /><strong>Hobbies:</strong> <a href="https://www.samsung.com/it/apps/galaxy-store/#watch">Watchface creator</a>; <br />Web designer (even if I didn't put a lot of effort on this one :) );<br /> Galaxy theme designer; App developer and more...<br /><br /><strong>Email:</strong> <a href="totalrkwf@gmail.com">totalrkwf@gmail.com</p>
+                            
        <a href='https://bengunur06.github.io/'><button class="button">Ra!n</button></a>
 
 </body>
