--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 align="center"><b><i>SDB PAGE</b></i></h1>
             <hr />
                 <h2 align="center"><b align="center">About me</b></h2>
-                <p align="center"><strong>Name:</strong> Samuele<br /><strong>Surname:</strong> Di Blasio <br /><strong>Age</strong>: 21<br /><strong>Birthday:</strong> 10/06/1998<br /><strong>Hobbies:</strong> <a href="https://www.samsung.com/us/apps/galaxy-store/#watch">Watchface creator</a>; <br />Web designer (even if I didn't put a lot of effort on this one :) );<br /> Galaxy theme designer; App developer and more...<br /><br /><strong>Email:</strong> <a href="mailto:totalrkwf@gmail.com">totalrkwf@gmail.com</p>
+                <p align="center"><strong>Name:</strong> Samuele<br /><strong>Surname:</strong> Di Blasio <br /><strong>Age</strong>: 21<br /><strong>Birthday:</strong> 10/06/1998<br /><strong>Hobbies:</strong> <a href="https://www.samsung.com/apps/galaxy-store/#watch">Watchface creator</a>; <br />Web designer (even if I didn't put a lot of effort on this one :) );<br /> Galaxy theme designer; App developer and more...<br /><br /><strong>Email:</strong> <a href="mailto:totalrkwf@gmail.com">totalrkwf@gmail.com</p>
                             
        <a href='https://bengunur06.github.io/'><button class="button">Ra!n</button></a>
 
