--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>SDB page   
     </title>  
 	   
-   <body style = "background: url(Samuele98-git.github.io/honeycomb-wallpaper-elegant-honey-b-wallpaper-c2b7e291a0-download-free-beautiful-hd-backgrounds-for-desktop-and-mobile-devices-in-this-year-of-honeycomb-wallpaper.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%>
+   <body style = "background: url(Samuele98-git.github.io/1308023.jpg); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%>
         
    </head>       
        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"; alt="comb"; align="center"> 
