--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <hr />
                 <h2 align="center"><b align="center">About me</b></h2>
                 <p align="center"><strong>Name:</strong> Samuele<br /><strong>Surname:</strong> Di Blasio <br /><strong>Age</strong>: 21<br /><strong>Birthday:</strong> 10/06/1998<br /><strong>Hobbies:</strong> Watchface creator; <br />Web designer (even if I didn't put a lot of effort on this one :) );<br /> Galaxy theme designer; <br />App developer and more...<br /><br /><strong>Email:</strong> <a href="mailto:totalrkwf@gmail.com">totalrkwf@gmail.com</a></p>
-                 <br /><p>Also see Rainfrog06 site:</p>           
+                 <br /><p>Also see Rainfrog06 website:</p>           
        <br /><br /><a href='https://bengunur06.github.io/'><button class="button">Ra!n</button></a>
 
 </body>
