--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <html>
     <head>
     <style>
-	  button {
+	    .button1 {
+             background-color: white;
+             color: black;
+             border: 2px solid #4CAF50; /* Green */
+              }
+	    .button1 {
+             transition-duration: 0.4s;
+	     }
+            .button1:hover {
              background-color: #4CAF50; /* Green */
-             border: none;
              color: white;
-             padding: 15px 32px;
-             text-align: center;
-             text-decoration: none;
-             display: inline-block;
-             font-size: 16px;
-         } 
-        body {
+}
+	    body {
 	       color: white
         }
     </style>  
@@ -26,9 +28,10 @@
             <h1 align="center"><b><i>SDB PAGE</b></i></h1>
             <hr />
                 <h2 align="center"><b align="center">About me</b></h2>
-                <p align="center"><strong>Name:</strong> Samuele<br /><strong>Surname:</strong> Di Blasio <br /><strong>Age</strong>: 21<br /><strong>Birthday:</strong> 10/06/1998<br /><strong>Hobbies:</strong> Watchface creator; <br />Web designer (even if I didn't put a lot of effort on this one :) );<br /> Galaxy theme designer; <br />App developer and more...<br /><br /><strong>Email:</strong> <a href="mailto:totalrkwf@gmail.com">totalrkwf@gmail.com</a></p>
-                 <br /><p>Also see Rainfrog06 site:</p>           
-       <br /><br /><a href='https://bengunur06.github.io/'><button class="button">Ra!n</button></a>
+                <p align="center"><strong>Name:</strong> Samuele<br /><strong>Surname:</strong> Di Blasio <br /><strong>Age</strong>: 22<br /><strong>Birthday:</strong> 10/06/1998<br /><strong>Hobbies:</strong> Watchface creator; <br />Web designer (even if I didn't put a lot of effort on this one :) );<br /> Galaxy theme designer; <br />App developer and more...<br /><br /><strong>Email:</strong> <a href="mailto:totalrkwf@gmail.com">totalrkwf@gmail.com</a></p>
+                 
+		<br /><p>Also see Rainfrog06 new website:</p>           
+       <br /><br /><a href='https://bengunur06.github.io/'><button1 class="button">Ra!n</button1></a>
 
 </body>
 </html>
