--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		border: none;
 	}
 	#HOME {
-		position: absolute;
+		position: auto;
 		width: 1920px;
 		height: 1080px;
 		background-color: rgba(255,255,255,1);
