--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	 
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=auto">
 <title>HOME</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
@@ -24,8 +24,8 @@
 	}
 	#HOME {
 		position: auto;
-		width: 1920px;
-		height: 1080px;
+		width: auto;
+		height: auto;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
 		--web-view-name: HOME;
