--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HOME</title>
-<style id="applicationStylesheet" type="text/css">
+<style="max-width:250px; width100%!important; id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: HOME;
 		--web-view-id: HOME;
@@ -3404,26 +3404,26 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div style="max-width:600px; width100%!important; id="HOME">
-	<div id="Samuele_Di_Blasio_">
+<div style="max-width:600px; width100%!important;" id="HOME">
+	<div style="max-width:250px; width100%!important;" id="Samuele_Di_Blasio_">
 		<span>Samuele Di Blasio </span>
 	</div>
-	<div id="Watchface_creator_Web_designer">
+	<div style="max-width:250px; width100%!important;" id="Watchface_creator_Web_designer">
 		<span>Watchface creator; Web designer; Galaxy theme designer; App developer <br/>and more...</span>
 	</div>
 	<svg class="Rettangolo_1">
 		<rect id="Rettangolo_1" rx="0" ry="0" x="0" y="0" width="1415.923" height="415">
 		</rect>
 	</svg>
-	<img id="ID0" src="ID0.png" srcset="ID0.png 1x, ID0@2x.png 2x">
-	<img id="ID20160801_162332" src="ID20160801_162332.png" srcset="ID20160801_162332.png 1x, ID20160801_162332@2x.png 2x">
-	<img id="ID0_n" src="ID0_n.png" srcset="ID0_n.png 1x, ID0_n@2x.png 2x">
-	<img id="ID0_o" src="ID0_o.png" srcset="ID0_o.png 1x, ID0_o@2x.png 2x">
-	<img id="IMG_1357" src="IMG_1357.png" srcset="IMG_1357.png 1x, IMG_1357@2x.png 2x">
-	<img id="ID0_q" src="ID0_q.png" srcset="ID0_q.png 1x, ID0_q@2x.png 2x">
-	<img id="ID0_r" src="ID0_r.png" srcset="ID0_r.png 1x, ID0_r@2x.png 2x">
-	<div id="Raggruppa_1">
-		<div id="___">
+	<img id="ID0" src="ID0.png" srcset="ID0.png 1x, ID0@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="ID20160801_162332" src="ID20160801_162332.png" srcset="ID20160801_162332.png 1x, ID20160801_162332@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="ID0_n" src="ID0_n.png" srcset="ID0_n.png 1x, ID0_n@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="ID0_o" src="ID0_o.png" srcset="ID0_o.png 1x, ID0_o@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="IMG_1357" src="IMG_1357.png" srcset="IMG_1357.png 1x, IMG_1357@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="ID0_q" src="ID0_q.png" srcset="ID0_q.png 1x, ID0_q@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="ID0_r" src="ID0_r.png" srcset="ID0_r.png 1x, ID0_r@2x.png 2x" style="max-width:250px; width100%!important;">
+	<div style="max-width:250px; width100%!important;" id="Raggruppa_1">
+		<div style="max-width:250px; width100%!important;" id="___">
 			<span>〈   〉</span>
 		</div>
 		<svg class="Linea_1" viewBox="0 0 9 20">
@@ -3431,8 +3431,8 @@ window.application = new Application();
 			</path>
 		</svg>
 	</div>
-	<div id="Raggruppa_2">
-		<div id="____w">
+	<div style="max-width:250px; width100%!important;" id="Raggruppa_2">
+		<div style="max-width:250px; width100%!important;" id="____w">
 			<span>〈   〉</span>
 		</div>
 		<svg class="Linea_1_x" viewBox="0 0 9 20">
@@ -3440,8 +3440,8 @@ window.application = new Application();
 			</path>
 		</svg>
 	</div>
-	<div id="Raggruppa_3">
-		<div id="____z">
+	<div style="max-width:250px; width100%!important;" id="Raggruppa_3">
+		<div style="max-width:250px; width100%!important;" id="____z">
 			<span>〈   〉</span>
 		</div>
 		<svg class="Linea_1_" viewBox="0 0 9 20">
@@ -3449,8 +3449,8 @@ window.application = new Application();
 			</path>
 		</svg>
 	</div>
-	<div id="Raggruppa_4">
-		<div id="____">
+	<div style="max-width:250px; width100%!important;" id="Raggruppa_4">
+		<div style="max-width:250px; width100%!important;" id="____">
 			<span>〈   〉</span>
 		</div>
 		<svg class="Linea_1_ba" viewBox="0 0 9 20">
@@ -3458,8 +3458,8 @@ window.application = new Application();
 			</path>
 		</svg>
 	</div>
-	<div id="Raggruppa_5">
-		<div id="____ba">
+	<div style="max-width:250px; width100%!important;" id="Raggruppa_5">
+		<div style="max-width:250px; width100%!important;" id="____ba">
 			<span>〈   〉</span>
 		</div>
 		<svg class="Linea_1_bb" viewBox="0 0 9 20">
@@ -3467,32 +3467,32 @@ window.application = new Application();
 			</path>
 		</svg>
 	</div>
-	<div id="Idea">
+	<div style="max-width:250px; width100%!important;" id="Idea">
 		<span>Idea</span>
 	</div>
-	<div id="Flow_chart__Write_">
+	<div style="max-width:250px; width100%!important;" id="Flow_chart__Write_">
 		<span>Flow chart / Write </span>
 	</div>
-	<div id="Coding">
+	<div style="max-width:250px; width100%!important;" id="Coding">
 		<span>Coding</span>
 	</div>
-	<div id="Development">
+	<div style="max-width:250px; width100%!important;" id="Development">
 		<span>Development</span>
 	</div>
-	<div id="Review">
+	<div style="max-width:250px; width100%!important;" id="Review">
 		<span>Review</span>
 	</div>
-	<div id="HOME_bc">
+	<div style="max-width:250px; width100%!important;" id="HOME_bc">
 		<span>HOME</span>
 	</div>
-	<div onclick="application.goToTargetView(event)" id="MENU">
+	<div onclick="application.goToTargetView(event)" style="max-width:250px; width100%!important;" id="MENU">
 		<span>MENU</span>
 	</div>
-	<div onclick="application.goToTargetView(event)" id="ABOUT">
+	<div onclick="application.goToTargetView(event)" style="max-width:250px; width100%!important;" id="ABOUT">
 		<span>ABOUT</span>
 	</div>
-	<img id="ID0_bf" src="ID0_bf.png" srcset="ID0_bf.png 1x, ID0_bf@2x.png 2x">
-	<img id="ID0_bg" src="ID0_bg.png" srcset="ID0_bg.png 1x, ID0_bg@2x.png 2x">
+	<img id="ID0_bf" src="ID0_bf.png" srcset="ID0_bf.png 1x, ID0_bf@2x.png 2x" style="max-width:250px; width100%!important;">
+	<img id="ID0_bg" src="ID0_bg.png" srcset="ID0_bg.png 1x, ID0_bg@2x.png 2x" style="max-width:250px; width100%!important;">
 	<svg class="Tracciato_3" viewBox="0 0 0 25.27">
 		<path id="Tracciato_3" d="M 1.622310684228079e-14 25 L 1.067199171915501e-14 1.216647742244575e-28 C 1.067199171915501e-14 1.216647742244575e-28 1.695890064663808e-14 28.3137092590332 1.622310684228079e-14 25 Z">
 		</path>
@@ -3501,13 +3501,13 @@ window.application = new Application();
 		<rect id="Rettangolo_5" rx="0" ry="0" x="0" y="0" width="508" height="174">
 		</rect>
 	</svg>
-	<div id="Quote">
+	<div style="max-width:250px; width100%!important;" id="Quote">
 		<span>Quote</span>
 	</div>
-	<div id="You_cant_connect_the_dots_look">
+	<div style="max-width:250px; width100%!important;" id="You_cant_connect_the_dots_look">
 		<span>“You can’t connect the dots looking forward; <br/>you can only connect them looking backward. <br/>So you have to trust that the dots will somehow<br/> connect in your future.”</span>
 	</div>
-	<div id="Steve_Jobs">
+	<div style="max-width:250px; width100%!important;" id="Steve_Jobs">
 		<span>Steve Jobs</span>
 	</div>
 	<svg class="Rettangolo_6">
