--- a/index.html
+++ b/index.html
@@ -3497,7 +3497,7 @@ window.application = new Application();
 		<path id="Tracciato_3" d="M 1.622310684228079e-14 25 L 1.067199171915501e-14 1.216647742244575e-28 C 1.067199171915501e-14 1.216647742244575e-28 1.695890064663808e-14 28.3137092590332 1.622310684228079e-14 25 Z">
 		</path>
 	</svg>
-	<svg class="Rettangolo_5">
+	<svg style="max-width:250px; width100%!important;" class="Rettangolo_5">
 		<rect id="Rettangolo_5" rx="0" ry="0" x="0" y="0" width="508" height="174">
 		</rect>
 	</svg>
@@ -3510,11 +3510,11 @@ window.application = new Application();
 	<div style="max-width:250px; width100%!important;" id="Steve_Jobs">
 		<span>Steve Jobs</span>
 	</div>
-	<svg class="Rettangolo_6">
+	<svg style="max-width:250px; width100%!important;" class="Rettangolo_6">
 		<rect id="Rettangolo_6" rx="0" ry="0" x="0" y="0" width="21" height="5">
 		</rect>
 	</svg>
-	<svg class="Poligono_1" viewBox="0 0 16 12">
+	<svg style="max-width:250px; width100%!important;" class="Poligono_1" viewBox="0 0 16 12">
 		<path id="Poligono_1" d="M 7.999999046325684 0 L 15.99999904632568 12 L 0 12 Z">
 		</path>
 	</svg>
