--- a/index.html
+++ b/index.html
@@ -3510,11 +3510,11 @@ window.application = new Application();
 	<div style="max-width:250px; width100%!important;" id="Steve_Jobs">
 		<span>Steve Jobs</span>
 	</div>
-	<svg style="max-width:250px; width100%!important;" class="Rettangolo_6">
+	<svg class="Rettangolo_6">
 		<rect id="Rettangolo_6" rx="0" ry="0" x="0" y="0" width="21" height="5">
 		</rect>
 	</svg>
-	<svg style="max-width:250px; width100%!important;" class="Poligono_1" viewBox="0 0 16 12">
+	<svg class="Poligono_1" viewBox="0 0 16 12">
 		<path id="Poligono_1" d="M 7.999999046325684 0 L 15.99999904632568 12 L 0 12 Z">
 		</path>
 	</svg>
