--- a/index.html
+++ b/index.html
@@ -3493,21 +3493,22 @@ window.application = new Application();
 	</div>
 	<img id="ID0_bf" src="ID0_bf.png" srcset="ID0_bf.png 1x, ID0_bf@2x.png 2x" style="max-width:250px; width100%!important;">
 	<img id="ID0_bg" src="ID0_bg.png" srcset="ID0_bg.png 1x, ID0_bg@2x.png 2x" style="max-width:250px; width100%!important;">
+	
 	<svg class="Tracciato_3" viewBox="0 0 0 25.27">
 		<path id="Tracciato_3" d="M 1.622310684228079e-14 25 L 1.067199171915501e-14 1.216647742244575e-28 C 1.067199171915501e-14 1.216647742244575e-28 1.695890064663808e-14 28.3137092590332 1.622310684228079e-14 25 Z">
 		</path>
 	</svg>
-	<svg style="max-width:250px; width100%!important;" class="Rettangolo_5">
+	<svg class="Rettangolo_5">
 		<rect id="Rettangolo_5" rx="0" ry="0" x="0" y="0" width="508" height="174">
 		</rect>
 	</svg>
-	<div style="max-width:250px; width100%!important;" id="Quote">
+	<div id="Quote">
 		<span>Quote</span>
 	</div>
-	<div style="max-width:250px; width100%!important;" id="You_cant_connect_the_dots_look">
+	<div id="You_cant_connect_the_dots_look">
 		<span>“You can’t connect the dots looking forward; <br/>you can only connect them looking backward. <br/>So you have to trust that the dots will somehow<br/> connect in your future.”</span>
 	</div>
-	<div style="max-width:250px; width100%!important;" id="Steve_Jobs">
+	<div id="Steve_Jobs">
 		<span>Steve Jobs</span>
 	</div>
 	<svg class="Rettangolo_6">
