--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HOME</title>
+<title>Sam98-github homepage</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: HOME;
@@ -3404,7 +3404,7 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div style="max-width:600px; width100%!important;"> id="HOME">
+<div style="max-width:600px; width100%!important;" id="HOME">
 	<div id="Samuele_Di_Blasio_">
 		<span>Samuele Di Blasio </span>
 	</div>
