--- a/index.html
+++ b/index.html
@@ -3404,7 +3404,7 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div style="max-width:600px; width100%!important;" id="HOME">
+<div id="HOME">
 	<div id="Samuele_Di_Blasio_">
 		<span>Samuele Di Blasio </span>
 	</div>
